lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__rfd__tests__create_first_record.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/rfd.rs
expression: "fs::read_to_string(path).unwrap()"
---
---
authors: 
state: predraft
discussion: 
---

# RFD 1 The First Decision

