lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__rfd__tests__create_multiple_records-3.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/rfd.rs
expression: "fs::read_to_string(third).unwrap()"
---
---
authors: 
state: predraft
discussion: 
---

# RFD 3 The Third Decision
