lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__rfd__tests__should_allow_custom_project_template.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/rfd.rs
expression: "fs::read_to_string(custom_template).unwrap()"
---
# TITLE

Project specific template!

# Status

STATUS

# Info

RFD Number: 2

Date: [DATE]
