lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__rfd__tests__should_list-2.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/rfd.rs
expression: "fs::read_to_string(&rfds[1]).unwrap()"
---
---
authors: 
state: predraft
discussion: 
---

# RFD 2 The Second Decision

